...
                                <rect key="frame" x="112" y="594" width="52" height="53"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="SOS"/>
                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                <state key="normal" title="SOS"/>
...
                                <rect key="frame" x="95" y="276" width="181" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="Number"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                <state key="normal" title="Submit"/>
                                <connections>
                                    <action selector="clickSubmit:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xZH-sf-r0z"/>
...
                                <rect key="frame" x="287" y="595" width="86" height="62"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="POLICE"/>
                                <connections>
                                    <action selector="clickPolice:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VkO-R1-Ccj"/>
...
                                <rect key="frame" x="14" y="595" width="72" height="64"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Fake Call"/>
                                <connections>
                                    <action selector="clickFakeCall:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SBx-LP-KbT"/>
...
                                <rect key="frame" x="207" y="595" width="64" height="64"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="CUSTOM"/>
                                <connections>
                                    <action selector="clickCustom:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gz2-6H-Oan"/>
...
                                <rect key="frame" x="16" y="31" width="41" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Home"/>
                                <connections>
                                    <action selector="goHome:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KUC-Z0-K6H"/>
...
                                <rect key="frame" x="29" y="381" width="57" height="49"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Settings"/>
                                <connections>
                                    <action selector="goSettings:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Gb6-bd-UT2"/>
...
